# BIMFabrikHH_api

./: .dockerignore  .gitignore  BIMFabrikHH_api.py  BIMFabrikHH_ogc.py  Dockerfile  LICENSE  README.md  env.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
alt/: api_trees_ogc_last.py  job.py  main.py  main_ogc_alt.py  ogc_json.py  ogc_tree.py  process.py  test_api.py  trees.py
alt/api_alt/: Documentation_api_trees_ogc.py  another_process.py  api_citymodell.py  api_gelaende.py  api_trees.py  app_ogc.py  main.py  new_process.py  ogc_api_BIMFabrikHH.py  ogc_api_main.py  redis_test.py  simple_process.py
alt/api_alt/processes/: main.py  number_process.py  simple_process.py  uppercase_process.py
alt/data_api_alt/: api_citymodell.py  api_gelaende.py  api_trees.py
alt/output_alt/alt/: Baeume_20250421-135907_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Baeume_20250421-135944_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Baeume_20250421-140634_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Baeume_20250421-140736_jobID_8ecfe760-b003-43d4-99ff-410df4e0c972.ifc  Baeume_20250421-141545_jobID_8056b490-6b45-48d0-81b9-c447ca869a77.ifc  Baeume_20250421-151559_jobID_dc12e3f1-b319-40a5-a734-143bb4873b38.ifc  Baeume_20250421-154819_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Baeume_20250421-154914_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Baeume_20250421-155204_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Baeume_20250421-160342_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Baeume_20250421-160522_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Baeume_20250421-160554_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Stadtmodell_20250421-153750_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Stadtmodell_20250421-154821_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Stadtmodell_20250421-154916_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Stadtmodell_20250421-155206_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Stadtmodell_20250421-160344_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Stadtmodell_20250421-160524_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Stadtmodell_20250421-160555_jobID_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  Stadtmodell_20250421_153517_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc  (+2 more)
alt/src/: app1.py  app2.py  app_trees.py
examples/: example_download_ifc_modell.py  example_request_ogc.py  example_request_ogc_https.py  test_download_ifc_modell.py
load_test/: locustfile.py
output/: README.md  Stadtmodell_20250421_163017_d3ac548b-a98b-4ff4-a367-31b17b637cec.ifc
src/: BIMFabrikHH_api.py  __init__.py
src/api/: __init__.py  web_app.py
src/api/config/: __init__.py  (+1 more)
src/database/: __init__.py  db_utils.py
templates/: index.html
tests/: README.md  __init__.py  conftest.py  get_ifc_modell.py  run_bim_model_tests.py  run_tests.py  test_admission_control.py  test_api_endpoints.py  test_celery_configuration.py  test_celery_database.py  test_celery_workers.py  test_city_model_generation.py  test_config.py  test_config_import.py  test_create_modells.py  test_database.py  test_dgm_model_generation.py  test_download_ifc_modell.py  test_download_ifc_modell_https.py  test_external_api_urls.py  test_generate_modells.py  test_hhtps_server.py  test_request_ogc.py  test_request_ogc_https.py  test_tree_model_generation.py
(+35 files in other folders)
