[tool.poetry]
name = "bimfabrikhh-api"
version = "0.1.0"
description = "Api for the BIMFabrikHH using OGC Api Procesess and FastAPI"
authors = ["Ahmed Salem <ahmed.salem@gv.hamburg.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.115.8"
pandas = "^2.2.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.38"
ifcopenshell = "^0.8.1.post1"
icosphere = "^0.1.3"
ifcpatch = "^0.8.1"
openpyxl = "^3.1.5"
bimfabrikhh = {path = "C:/_Lokale_Daten_ungesichert/__GitHubProjects/BIMFabrikHH_core", develop = true}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
